--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "heroku": "^7.60.2",
     "mongoose": "^6.3.4"
   }
 }
