--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ls",
   "version": "1.0.0",
+  "engines":{
+    "node": "16.14.2"
+  },
   "description": "#jeffrey",
   "main": "server.js",
   "scripts": {
@@ -22,7 +25,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "heroku": "^7.60.2",
     "mongoose": "^6.3.4"
   }
 }
